--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -1,7 +1,12 @@
-<h1>All blogs</h1> <br>
+<h1>All blogs</h1>
+<br>
 <% if (locals.list) { %>
     <% list.forEach(item => { %>
-        <h3><%= item.title %></h3>
-        <p><%= item.description %></p>
+        <form action="/blog" method="POST">
+            <input type="hidden" name="id" value="<%= item.id %>">
+            <p><%= item.title %></p>
+            <p><%= item.description %></p>
+            <button type="submit">View Blog</button>
+        </form>
     <% }) %>
 <% } %>
