added header part for all pages

--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,5 +1,6 @@
-<% if (locals.data) { %>
-    <h1><%- data.id %> </h1>
-    <p><%- data.title %></p>
-    <p><%- data.description %></p>
-<% } %>
+<%- include('partials/header.ejs') %>
+    <% if (locals.data) { %>
+        <h1><%- data.id %> </h1>
+        <p><%- data.title %></p>
+        <p><%- data.description %></p>
+        <% } %>
