--- a/views/add_blog.ejs
+++ b/views/add_blog.ejs
@@ -1,7 +1,8 @@
-<h1>Add Blog</h1>
+<%- include('partials/header.ejs') %>
+    <h1>Add Blog</h1>
 
-<form action="/blog_submit" method="POST">
-    <input type="text" name="title" placeholder="title">
-    <input type="text" name="description" placeholder="description">
-    <input type="submit" value="Submit">
-</form>
+    <form action="/blog_submit" method="POST">
+        <input type="text" name="title" placeholder="title">
+        <input type="text" name="description" placeholder="description">
+        <input type="submit" value="Submit">
+    </form>
