--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -1,12 +1,17 @@
-<h1>All blogs</h1>
-<br>
-<% if (locals.list) { %>
-    <% list.forEach(item => { %>
-        <form action="/blog" method="POST">
-            <input type="hidden" name="id" value="<%= item.id %>">
-            <p><%= item.title %></p>
-            <p><%= item.description %></p>
-            <button type="submit">View Blog</button>
-        </form>
-    <% }) %>
-<% } %>
+<%- include('partials/header.ejs') %>
+    <h1>All blogs</h1>
+    <br>
+    <% if (locals.list) { %>
+        <% list.forEach(item=> { %>
+            <form action="/blog" method="POST">
+                <input type="hidden" name="id" value="<%= item.id %>">
+                <p>
+                    <%= item.title %>
+                </p>
+                <p>
+                    <%= item.description %>
+                </p>
+                <button type="submit">View Blog</button>
+            </form>
+            <% }) %>
+                <% } %>
