added footer for all the pages the footer and header are for temparey

--- a/views/add_blog.ejs
+++ b/views/add_blog.ejs
@@ -6,3 +6,4 @@
         <input type="text" name="description" placeholder="description">
         <input type="submit" value="Submit">
     </form>
+    <%- include('partials/footer.ejs') %>
