--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -13,5 +13,5 @@
                 </p>
                 <button type="submit">View Blog</button>
             </form>
-            <% }) %>
-                <% } %>
+            <% }) }%>
+                <%- include('partials/footer.ejs') %>
