--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -4,3 +4,4 @@
         <p><%- data.title %></p>
         <p><%- data.description %></p>
         <% } %>
+            <%- include('partials/footer.ejs') %>
