renamed footer and header files as html and made changes according in the dependent files

--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,7 +1,7 @@
-<%- include('partials/header.ejs') %>
+<%- include('partials/header.html') %>
     <% if (locals.data) { %>
         <h1><%- data.id %> </h1>
         <p><%- data.title %></p>
         <p><%- data.description %></p>
         <% } %>
-            <%- include('partials/footer.ejs') %>
+            <%- include('partials/footer.html') %>
