--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,3 +1,3 @@
-<%- include('partials/header.ejs') %>
+<%- include('partials/header.html') %>
 <h1>about</h1>
-<%- include('partials/footer.ejs') %>
+<%- include('partials/footer.html') %>
