--- a/views/add_blog.ejs
+++ b/views/add_blog.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header.ejs') %>
+<%- include('partials/header.html') %>
     <h1>Add Blog</h1>
 
     <form action="/blog_submit" method="POST">
@@ -6,4 +6,4 @@
         <input type="text" name="description" placeholder="description">
         <input type="submit" value="Submit">
     </form>
-    <%- include('partials/footer.ejs') %>
+    <%- include('partials/footer.html') %>
