--- a/views/blogs.ejs
+++ b/views/blogs.ejs
@@ -1,4 +1,4 @@
-<%- include('partials/header.ejs') %>
+<%- include('partials/header.html') %>
     <h1>All blogs</h1>
     <br>
     <% if (locals.list) { %>
@@ -14,4 +14,4 @@
                 <button type="submit">View Blog</button>
             </form>
             <% }) }%>
-                <%- include('partials/footer.ejs') %>
+                <%- include('partials/footer.html') %>
