--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,3 @@
-<%- include('partials/header.ejs') %>
+<%- include('partials/header.html') %>
     <h1>Home</h1>
-    <%- include('partials/footer.ejs') %>
+    <%- include('partials/footer.html') %>
