--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -1,7 +1,12 @@
 <%- include('partials/header.html') %>
+<h1>rehaman</h1>
     <% if (locals.data) { %>
+        <form action="/delete_blog" method="POST">
         <h1><%- data.id %> </h1>
         <p><%- data.title %></p>
         <p><%- data.description %></p>
+            <input type="hidden" name="id" value="<%= data.id %>">
+            <button type="submit">Delete</button>
+        </form>
         <% } %>
             <%- include('partials/footer.html') %>
