added custom css for the header and footer

--- a/views/partials/footer.html
+++ b/views/partials/footer.html
@@ -1,5 +1,6 @@
 <footer>
-  <br>
-  <p>Copyright © 2024 Rehaman</p>
-  <p>All rights reserved.</p>
+  <div class="footer">
+    <p>Copyright © 2024 Rehaman</p>
+    <p>All rights reserved.</p>
+  </div>
 </footer>
