--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <header>
-    <button><a href="/">Home</a></button>
-    <button><a href="/add_blog">Add Blog</a></button>
-    <button><a href="/blogs">Blogs</a></button>
-    <button><a href="/about">About</a></button>
-    <hr>
+    <div class="nav">
+        <button><a href="/">Home</a></button>
+        <button><a href="/add_blog">Add Blog</a></button>
+        <button><a href="/blogs">Blogs</a></button>
+        <button><a href="/about">About</a></button>
+    </div>
 </header>
