--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,13 +1,18 @@
-body{
+body {
     background-color: rgb(188, 184, 181);
-}   
+}
 
-.nav{
+.nav {
     background-color: white;
     padding: 5px;
 }
 
-.footer{
+.footer {
+    background-color: white;
+    padding: 5px;
+}
+
+.main {
     background-color: white;
     padding: 5px;
 }
