--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,3 +1,5 @@
 <%- include('partials/header.html') %>
-<h1>about</h1>
+<section class="main">
+<h1>About</h1>
+</section>
 <%- include('partials/footer.html') %>
