--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,5 @@
 <%- include('partials/header.html') %>
-    <h1>Home</h1>
+    <section class="main">
+        <h1>Home</h1>
+    </section>
     <%- include('partials/footer.html') %>
