--- a/views/add_blog.ejs
+++ b/views/add_blog.ejs
@@ -5,6 +5,10 @@
         <form action="/blog_submit" method="POST">
             <input type="text" name="title" placeholder="title">
             <input type="text" name="description" placeholder="description">
+            <input type="text" name="author" placeholder="author">
+            <input type="text" name="date" placeholder="date">
+            <!--<input type="text" name="author" placeholder="author">
+            <input type="text" name="author" placeholder="author"> -->
             <input type="submit" value="Submit">
         </form>
     </section>
