change new home route in the header

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -9,7 +9,7 @@
 </head>
 <header>
     <div class="nav">
-        <button><a href="/">Home</a></button>
+        <button><a href="/home">Home</a></button>
         <button><a href="/add_blog">Add Blog</a></button>
         <button><a href="/blogs">Blogs</a></button>
         <button><a href="/about">About</a></button>
