added landing page with ui onlt

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -3,7 +3,7 @@
         <h3>Welcome to the world of blogs</h3>
         <p>Here you can find the most popular blogs and highest rate blogs</p>
 
-        <button>Signup</button>
+        <a href="/signup"><button>Signup</button></a>
         <button>Login</button>
     </section>
 
