changed the btn in a to a in btn

--- a/views/partials/header.html
+++ b/views/partials/header.html
@@ -9,10 +9,10 @@
 </head>
 <header>
     <div class="nav">
-        <button><a href="/home">Home</a></button>
-        <button><a href="/add_blog">Add Blog</a></button>
-        <button><a href="/blogs">Blogs</a></button>
-        <button><a href="/about">About</a></button>
+        <a href="/home"><button>Home</button></a>
+        <a href="/add_blog"><button>Add Blog</button></a>
+        <a href="/blogs"><button>Blogs</button></a>
+        <a href="/about"><button>About</button></a>
     </div>
 </header>
 <br>
