--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,18 +1,35 @@
-body {
-    background-color: rgb(188, 184, 181);
-}
-
 .nav {
-    background-color: white;
+    background-color: #F8FAF0;
     padding: 5px;
 }
 
 .footer {
-    background-color: white;
+    background-color: #F8FAF0;
     padding: 5px;
 }
 
 .main {
-    background-color: white;
+    background-color: #F8FAF0;
     padding: 10px;
+}
+
+.blog_form{
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.inline{
+    display: inline;
+}
+
+.margin_left_5px{
+    margin-bottom: 5px;
+}
+
+p{
+    color: #0088FF;
+}
+
+button{
+    background-color: #FF7700;
 }
